# yuutools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yuutools/: __init__.py  _depends.py  _manager.py  _schema.py  _spec.py  _tool.py
tests/: test_core.py  test_schema.py
